--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "Sara Iqbal",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
+    "bcryptjs": "^2.4.3",
     "color": "^4.2.3",
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "nodemon": "^2.0.20"
   }
