--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "^2.1.3",
     "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
